--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
     <li>reading novels</li>
 </ol>
 
+<form>
+    <ol>
+  <li> name <input type="text" placeholder="enter your name"></li>
+   <li> Gender<input type="radio" name="gender"/>Male</li>
+  <li>  Gender<input type="radio" name="gender"/>FeMale</li>
+    interest<input type="checkbox" name="interest">Coding
+    interest<input type="checkbox" name="interest">singing
+    interest<input type="checkbox" name="interest">Reading
+<input type="button" value="Submit"
+    </ol>
+</form>
+
 
 </head>
 <body>
