--- a/index4.html
+++ b/index4.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style4.css" type="text/css"/>
+    <script>
+      function click()
+      {
+        alert("Resume is downloaded");
+      }
+    </script>
 </head>
 <body>
   <div class="main-container">
@@ -71,7 +77,9 @@
                         <p class="icontitle">Marketing</p>
                          <P class="icontext">  99%</p></div>
                             </div> 
-   <p class="download-text">Download Resume--------</p>
+   <!--<p class="download-text">Download Resume--------</p> -->
+   <input type="button" value="Download resume" onclick="window.click()"/>
+
 
     </div>
 
