--- a/index3.html
+++ b/index3.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="style2.css" type="text/css"/>
+    <link rel="stylesheet" href="style3.css" type="text/css"/>
 </head>
 <body>
-<body id="body">
-    <nav id="nav-bar">
+<div class="navbar-container">
+    <div>
         <span class="nav-title">Apsara,</span>
-        <span >
+        <span>
             <span class="nav-item">Home</span>
             <span class="nav-item">Works</span>
             <span class="nav-item">About</span>
@@ -19,8 +19,9 @@
             <span class="nav-item">Services</span>
         </span >
         <input id="nav-button" value="lets chat" type="button"/>
-    </nav>
-    <div style="display:flex;flex-direction: row">
+    </div>
+</div>
+   <!--<div style="display:flex;flex-direction: row">
     <div >
         <h1>HI! I am Apsara Bishwokarma</h1>
         <p>
@@ -30,6 +31,52 @@
         <input type="button" value="Projects"/>
         <div style="display:flex;flex-direction: row"></div>
        
+    </div> -->
+    <div class="image">
+        <img src=""width="350px" height="350px">
     </div>
+    <div class="container">
+        <div class="con">
+            <div>
+                <p class="name">HI! I AM <br/>APSARA</p>
+            </div>
+            <div>
+                <p>Designing interface for over<strong>7 years</strong><br/>as a project designer</p>
+            </div>
+            <div class="hire">
+                <input type="button" value="Hire me" class="hire-text"/>
+                <P>Projects</p>
+                
+            </div>
+        </div>
+        <p class="num">+84</p>
+        <p>clients on work<br/>Worldwide</p>
+    </div>
+    <div class="contact">
+        <div>
+            <p class="phone">572</p>
+            <p>project done</p>
+        </div>
+        <div class="gmail">
+            <p><strong>Contact</strong></p>
+            <p>apsarabishwokarma7@gmail.com</p>
+        </div>
+        </div>
+    </div>
+    <div class="icons">
+        <div>
+            <p class="project">Project<br/>stastics 2022</p>
+            <input type="button" value="know more" class="more">
+        </div>
+        <div class="place">
+            <p>web design                    75<br/></p>
+            <p>mobile app design              64<br/></p>
+            <p>brand identity                 37<br/></p>
+        </div>
+    </div>
+
+    </div>
+</div>
+
 </body>
 </html>
