--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -14,6 +14,29 @@
       <a href="https://apsarabiswokarma.github.io/" target="_blank">by Apsara</a>
     </p>
   </header>
+  <main>
+    <section id="start">
+      <p>Let's say you have a product, a portfolio, or just an idea you want to share with everyone on your <em>own</em>
+        website. Before you publish it on the internet, you want to make it look attractive, professional, or at least
+        <em>decent</em> to look at.
+      </p>
+      <p>What is the <a href="#content">first thing</a> you need to work on?</p>
+    </section>
+
+    <section id="content">
+      <h2>Content</h2>
+      <p>The purpose of <strong>design</strong> is to enhance the presentation of the content it's applied to. It might
+        sound obvious, but content being the <strong>primary</strong> element of a website, it should not be established
+        as an afterthought.</p>
+      <p>Written content, like the paragraph you're currently reading, makes up for more than 90% of the Web. Styling
+        this textual content will go a long way.</p>
+      <p>Let's assume you've already finalized the content you want to publish and just created an empty
+        <code>style.css</code> file, what is the <a href="#centering">first rule</a> you can write?
+      </p>
+    </section>
+
+
+
 </body>
 
 </html>
