html basics day1

--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -34,7 +34,15 @@
         <code>style.css</code> file, what is the <a href="#centering">first rule</a> you can write?
       </p>
     </section>
-
+    <section id="centering">
+      <h2>Centering</h2>
+      <p>Long lines of text can be hard to parse, and thus hard to <strong>read</strong>. Setting a limit of characters
+        per line greatly enhances the readability and appeal of a wall of text.</p>
+      <pre><span class="selector">body</span> {
+<span class="attribute">margin</span>: <span class="number">0</span> auto;
+<span class="attribute">max-width</span>: <span class="number">50</span><span class="unit">em</span>;
+}</pre>
+      <p>After styling the text <em>blocks</em>, what about styling the <a href="#font-family">text itself</a>?</p>
 
 
 </body>
