--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -44,7 +44,19 @@
 }</pre>
       <p>After styling the text <em>blocks</em>, what about styling the <a href="#font-family">text itself</a>?</p>
 
+    </section>
 
+    <section id="font-family">
+      <h2>Font family</h2>
+      <p>The browser's font defaults to <code>"Times"</code>, which can look unappealing (mostly because it is the
+        "unstyled" font). Switching to a <strong>sans-serif</strong> font like <code>"Helvetica"</code> or
+        <code>"Arial"</code> can vastly improve the look of your page.</p>
+      <pre><span class="selector">body</span> {
+<span class="attribute">font-family</span>: <span class="string">"Helvetica"</span>, <span class="string">"Arial"</span>, sans-serif;
+}</pre>
+      <p><em>If you want to stick with a serif font, try <code>"Georgia"</code>.</em></p>
+      <p>While this makes the text more <em>appealing</em>, let's also make it <a href="#spacing">more readable</a>.</p>
+    </section>
 </body>
 
 </html>
