html basics day2

--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -75,6 +75,20 @@
       <p>While the layout has greatly improved so far, let's apply more <a href="#color-contrast">subtle changes</a>.
       </p>
     </section>
+    <section id="color-contrast">
+      <h2>Color &amp; contrast</h2>
+      <p>Black text on a white background can be harsh on the eyes. Opting for a softer shade of black for body text makes the page more <strong>comfortable</strong> to read.</p>
+<pre><span class="selector">body</span> {
+<span class="attribute">color</span>: <span class="number">#555</span>;
+}</pre>
+      <p>And in order to keep a decent level of <strong>contrast</strong>, let's pick a darker shade for <strong>important</strong> words</p>
+<pre><span class="selector">h1</span>,
+<span class="selector">h2</span>,
+<span class="selector">strong</span> {
+<span class="attribute">color</span>: <span class="number">#333</span>;
+}</pre>
+      <p>While most of the page has been improved visually, some elements (like the code snippets) still seem <a href="#balance">out of place</a>.</p>
+    </section>
 
 </body>
 
