html basics day2

--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -144,6 +144,21 @@
 }</pre>
       <p>Having changed the shades, why not change the <a href="#custom-font">shapes</a>...</p>
     </section>
+    <section id="custom-font">
+      <h2>Custom font</h2>
+      <p>Since text is the main content of a webpage, using a <strong>custom font</strong> gives the page even more
+        noticeable identity.</p>
+      <p>While you can embed your own webfont or use an online service like <a href="https://typekit.com"
+          target="_blank">Typekit</a>, let's use <code>"Roboto"</code> from the free <a href="https://fonts.google.com"
+          target="_blank">Google Fonts</a> service:</p>
+      <pre><span class="keyword">@import</span> <span class="string">'https://fonts.googleapis.com/css?family=Roboto:300,400,500'</span>;
+
+<span class="selector">body</span> {
+<span class="attribute">font-family</span>: <span class="string">"Roboto"</span>, <span class="string">"Helvetica"</span>, <span class="string">"Arial"</span>, sans-serif;
+}</pre>
+      <p>After enhancing your identity through <em>text</em>, how about adding a <a href="#images">thousand words</a>...
+      </p>
+    </section>
 
 </body>
 
