html basics day3

--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -212,7 +212,20 @@
       <p>We've designed a decent page in just a few minutes, following basic principles of web design. There's only <a
           href="#share">one last thing</a> left to do...</p>
     </section>
+    < id="share">
+      <h2>Share the love!</h2>
+      <nav class="buttons">
+        <a class="button github" href="https://github.com/jgthms/web-design-in-4-minutes" target="_blank">
+          <em>Download on</em> <strong>GitHub</strong>
+        </a>
+        <a class="button twitter" data-social-network="Twitter" data-social-action="tweet"
+          data-social-target="http://jgthms.com/web-design-in-4-minutes/"
+          href="https://twitter.com/intent/tweet?text=Web%20Design%20in%204%20minutes&url=http%3A%2F%2Fjgthms.com%2Fweb-design-in-4-minutes%2F&via=jgthms"
+          rel="nofollow" target="_blank">
 
+          <em>Share on</em> <strong>Twitter</strong>
+        </a>
+      </nav>
 
 </body>
 
