html basics day3

--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -226,7 +226,21 @@
           <em>Share on</em> <strong>Twitter</strong>
         </a>
       </nav>
+      <h2>Learn how to design with code!</h2>
+      <p>
+        Here are the resources I wrote to help you learn CSS:
+      </p>
+      <nav class="resources">
+        <a class="resource-marksheet resource" href="http://marksheet.io" target="_blank">
+          <figure class="resource-icon">
+            <img src="marksheet.png" alt="Logo of MarkSheet">
+          </figure>
 
+        </a>
+        <a class="resource-bulma resource" href="http://bulma.io" target="_blank">
+          <figure class="resource-icon">
+            <img src="bulma.png" alt="Logo of Bulma">
+          </figure>
 </body>
 
 </html>
