html basics day4

--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -235,6 +235,24 @@
           <figure class="resource-icon">
             <img src="bulma.png" alt="Logo of Bulma">
           </figure>
+
+          <p>
+            <strong class="resource-name">Bulma</strong>
+            my <strong>CSS framework</strong> based on Flexbox, so you can get started right away
+          </p>
+        </a>
+        <a class="resource-css-reference resource" href="http://cssreference.io" target="_blank">
+          <figure class="resource-icon">
+            <img src="css-reference.png" alt="Logo of CSS Reference">
+          </figure>
+          <p>
+            <strong class="resource-name">CSS Reference</strong>
+            <strong>visual guide</strong> to the most popular CSS properties
+          </p>
+        </a>
+      </nav>
+      <p>Thanks for reading!</p>
+      </section>
 </body>
 
 </html>
