--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -253,6 +253,29 @@
       </nav>
       <p>Thanks for reading!</p>
       </section>
+      <footer>
+        <a class="button" href="https://apsarabiswokarma.github.io/" target="_blank">Made by
+          <strong>@apsara</strong></a>
+      </footer>
+  </main>
+
+  <script type="text/javascript">
+    WebFontConfig = {
+      google: {
+        families: ['Roboto:300,400,500']
+      }
+    };
+
+    (function (d) {
+      var wf = d.createElement('script'), s = d.scripts[0];
+      wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js';
+      s.parentNode.insertBefore(wf, s);
+    })(document);
+  </script>
+</body>
+
+</html>
+
 </body>
 
 </html>
