html basics day5

--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -222,7 +222,7 @@
       </nav>
       <h2>Learn how to design with code!</h2>
       <p>
-        Here are the resources I wrote to help you learn CSS:
+        Here are the resources I searched on internet to help you learn CSS:
       </p>
       <nav class="resources">
         <a class="resource-marksheet resource" href="http://marksheet.io" target="_blank">
