--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -212,8 +212,9 @@
       <p>We've designed a decent page in just a few minutes, following basic principles of web design. There's only <a
           href="#share">one last thing</a> left to do...</p>
     </section>
-    
-     < id="share">
+
+    <section id="share">
+
       <h2>Share the love!</h2>
       <nav class="buttons">
         <a class="button github" href="https://github.com/jgthms/web-design-in-4-minutes" target="_blank">
@@ -253,11 +254,11 @@
         </a>
       </nav>
       <p>Thanks for reading!</p>
-      </section>
-      <footer>
-        <a class="button" href="https://apsarabiswokarma.github.io/" target="_blank">Made by
-          <strong>@apsara</strong></a>
-      </footer>
+    </section>
+    <footer>
+      <a class="button" href="https://apsarabiswokarma.github.io/" target="_blank">Made by
+        <strong>@apsara</strong></a>
+    </footer>
   </main>
 
   <script type="text/javascript">
