--- a/basics of Html-css-js/weddev basics/index.html
+++ b/basics of Html-css-js/weddev basics/index.html
@@ -217,7 +217,7 @@
 
       <h2>Share the love!</h2>
       <nav class="buttons">
-        <a class="button github" href="https://github.com/apsarabiswokarma" target="_blank">
+        <a class="button github" href="https://github.com/apsarabiswokarmas" target="_blank">
           <em>Download on</em> <strong>GitHub</strong>
         </a>
 
